--- a/style.css
+++ b/style.css
@@ -3,14 +3,18 @@
   /* font-family: 'Roboto Slab', serif; */
 /*   font-family: 'Lora', serif;  */
   font-family: 'Montserrat', sans-serif;
+  /*! font-family: 'Rubik', sans-serif; */
   color: #333333;
   margin: 0;
   padding: 0;
   text-align: center;
-  outline: 1px solid transparent;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -webkit-font-smoothing: antialiased;
+/*   outline: 1px solid transparent; */
+/*   backface-visibility: hidden; */
+/*   -webkit-backface-visibility: hidden; */
+/*   -webkit-font-smoothing: antialiased; */
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 html {
@@ -23,7 +27,7 @@ html {
 }
 
 body {
-  height: 470vh;
+  height: 484.5vh;
   background-color: #062d3e;
   background-color: black;
   background-color: #000e13;
@@ -62,6 +66,23 @@ main {
   transform-style: preserve-3d;
   perspective: 3000px;
   perspective-origin: center;
+}
+
+.centerpiece-container {
+  position: fixed;
+/*   top: 20vh; */
+  left: 0;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+/*     mask-image: linear-gradient(
+    0deg, 
+    rgba(0,0,0,1) 0%, 
+    rgba(0,0,0,1)10%, 
+    rgba(0,0,0,0.4) 30%, 
+    rgba(0,0,0,0.4) 55%, 
+    rgba(0,0,0,1) 60%, 
+    rgba(0,0,0,1) 100%); */
+  mix-blend-mode: lighten;
 }
 
 .lp-bg {
@@ -112,7 +133,7 @@ main {
   position: fixed;
   top: 20vh;
   left: 10vw;
-  height: 50vh;
+  height: 30vh;
   width: 80vw;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
@@ -124,7 +145,7 @@ main {
 }
 
 .introduction {
-  font-size: 5em;
+  font-size: 4em;
   text-align: left;
   padding-right: 0.5em;
 /*   transform: scale3d(1, 1.2, 1); */
@@ -355,10 +376,11 @@ main {
   pointer-events: none;
   transition: 0.5s;
   color: white;
+/*   color: rgba(200, 200, 200, 1); */
+/*   background-blend-mode:color; */
 }
 
 .first-letter {
-  
 }
 
 .first-part {
@@ -408,9 +430,9 @@ main {
 .show-projects:after {
   content: '';
   position: absolute;
-  top: 0;
+  top: 30%;
   right: 0;
-  height: 110%;
+  height: 40%;
   width: 1%;
   background-color: white;
   transform: skewX(-20deg);
@@ -419,9 +441,9 @@ main {
 .show-about-me:after {
   content: '';
   position: absolute;
-  top: 0;
+  top: 30%;
   right: 0;
-  height: 110%;
+  height: 40%;
   width: 1%;
   background-color: white;
   transform: skewX(-20deg);
@@ -460,10 +482,25 @@ main {
   transform: translate3d(0, -50%, 0);
 }
 
+.top-projects-line {
+  position: absolute;
+  bottom: -10vh;
+  left: 0;
+  height: 2px;
+  width: 100%;
+/*   background-color: #00babb; */
+  background-image: linear-gradient(to top, transparent, rgba(255, 255, 255, 1), transparent);
+  transition: 1s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  transition-timing-function: ease-in;
+  transform-origin: left;
+  transform: scale3d(0, 1, 1);
+}
+
 .ph-inner {
 /*   position: absolute; */
   position: relative;
-  top: 15vh;
+  top: 40vh;
   left: 0;
   height: 20vh;
   width: 100vw;
@@ -517,9 +554,15 @@ main {
 
 .phl {
   color: white;
-  font-size: 3em;
+/*   color: #000e13; */
+  font-size: 5em;
+  transition: 1s;
+/*   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1); */
+  transition-timing-function: ease;
+  transition-delay: 1.2s;
 /*   font-family: 'Lora', serif;  */
 /*   transform: scale3d(0.6, 0.9, 1); */
+  text-shadow: -1px -1px 5px black;
 }
 
 .move-down .ph-text {
@@ -547,42 +590,84 @@ main {
   position: relative;
   padding-top: 30vh;
   padding-bottom: 5vh;
-  margin-top: -20vh;
+/*   margin-top: -20vh; */
 /*   background-color: white; */
   background-color: #333333;
 /*   background-image: linear-gradient(to bottom, transparent, white 10%); */
 /*   background-image: linear-gradient(to bottom, red, blue 30%); */
 /*   background-color: black; */
 /*   background-color: #000e13; */
-/*   box-shadow: 0 -150px 100px 25px rgba(0, 0, 0, 1); */
+  box-shadow: 0 -150px 100px 25px rgba(0, 0, 0, 0.2);
 /*   box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
   z-index: 11;
-  transform: translate3d(-50%, 0, 0) skewX(50deg);
+/*   transform: translate3d(-50%, 0, 0) skewX(50deg); */
   transition: 0.75s;
+  transition-delay: 0.2s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
 
-.projects-container:before {
+/* .projects-container:before {
   content: '';
   position: absolute;
   top: 0;
-  left: 70vw;
+  left: 3px;
   height: 100%;
-  width: 1px;
-  background-image: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.3), transparent);
+  width: 100%;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  z-index: -1;
+  transition: 0.75s;
+  transition-delay: 0.75s;
+  transform-origin: top left;
+  transform: scale3d(0, 0, 1);
+  transition-timing-function: ease;
+}
+
+.projects-container.in-focus:before {
+  transform: scale3d(1, 1, 1);
 }
 
 .projects-container:after {
   content: '';
   position: absolute;
   top: 0;
-  left: 30vw;
+  left: 0;
   height: 100%;
+  width: 100%;
+  background-color: #333333;
+  z-index: -1;
+  transition: 0.75s;
+  transition-delay: 2s;
+  transform-origin: left;
+  opacity: 0;
+  transition-timing-function: ease;
+}
+
+.projects-container.in-focus:after {
+  opacity: 1;
+} */
+
+.lines-down {
+  position: absolute;
+  top: 0;
   width: 1px;
+  height: 100%;
   background-image: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.3), transparent);
+  transition: 2.25s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  transition-delay: 1s;
+  transform-origin: top;
+}
+
+.ld1 {
+  left: 30vw;
+}
+
+.ld2 {
+  left: 70vw;
 }
 
 .projects-container * {
@@ -595,7 +680,7 @@ main {
   top: 0%;
   left: 30vw;
 /*   border-radius: 15px; */
-  transition: 0.5s;
+  transition: 1s;
   height: 40vh;
   width: 40vw;
 /*   padding-top: 3%; */
@@ -612,7 +697,8 @@ main {
 /*   background-color: #000e13; */
 /*   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 3px 3px 5px rgba(255, 255, 255, 0.4); */
   box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
-  
+  transform-origin: top;
+  transition-timing-function: cubic-bezier(.27,.65,0,1.02);
 }
 
 .project-one-container, .project-three-container {
@@ -645,18 +731,32 @@ main {
   margin-left: 0.5em;
 }
 
+.reveal.project-one-container, .reveal.project-two-container, .reveal.project-three-container {
+/*   transform: scale3d(1, 1, 1); */
+  opacity: 1;
+}
+
+.project-one-container, .project-two-container, .project-three-container {
+/*   transform: scale3d(1, 0, 1); */
+  opacity: 0;
+}
+
 .project-one-container:after, .project-two-container:after, .project-three-container:after {
   content: '';
   position: absolute;
-  top: -2.5vh;
-  left: 0vw;
-  height: 35vh;
-  width: 70vw;
-  z-index: -1;
-  background-color: #000e13;
-  border-radius: 2px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 3px 3px 5px rgba(255, 255, 255, 0.4);
-  display: none;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 15;
+  background-color: #f77f00;
+  transition: 1s;
+  transform-origin: bottom;
+  transition-timing-function: cubic-bezier(.27,.65,0,1.02);
+}
+
+.reveal.project-one-container:after, .reveal.project-two-container:after, .reveal.project-three-container:after {
+  transform: scaleY(0);
 }
 
 
@@ -800,7 +900,7 @@ main {
 .project-title {
   transition-delay: 0.35s;
   font-family: 'Montserrat', sans-serif;
-  font-size: 3em;
+  font-size: 2.5em;
 /*   font-weight: lighter; */
   white-space: nowrap;
   grid-area: title;
@@ -846,6 +946,7 @@ main {
   transition-delay: 0.45s;
   line-height: 1.7;
   font-size: 1.1em;
+  font-family: 'Rubik', sans-serif;
   text-align: right;
   grid-area: description;
   height: 15vh;
@@ -919,7 +1020,7 @@ main {
   height: 70vh;
   width: 50%;
   position: absolute;
-  top: 315vh;
+  top: 345vh;
   transition: 0.2s;
   z-index: 12;
   transition: 0.5s;
@@ -955,6 +1056,7 @@ main {
   line-height: 90vh;
 /*   color: #00babb; */
   color: #000e13;
+/*   text-shadow: 5px 5px 5px red; */
 }
 
 
@@ -1013,7 +1115,8 @@ main {
   color: #000e13;
   padding: 0.75em;
 /*   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); */
-  font-size: 1.5em;
+  font-size: 1.6em;
+  font-family: 'Rubik', sans-serif;
 }
 
 .ams1 {
@@ -1159,6 +1262,7 @@ main {
   width: 100%;
   transition: 1.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+  background-color: black;
 }
 
 .contact-card-outer.at-bottom {
@@ -1179,8 +1283,8 @@ main {
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   opacity: 0;
-  background-color: #000e13;
-  background-color: #333333;
+/*   background-color: #000e13; */
+/*   background-color: #333333; */
 /*   transform: translate3d(0, 100%, 0); */
   overflow: hidden;
 }
@@ -1234,7 +1338,7 @@ main {
 
 .email-me, .call-me, .my-resume, .my-work {
   color: #b99948;
-  font-size: 1.3em;
+  font-size: 1.6em;
 }
 
 .contact-sect-resume {
