--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-  height: 484.5vh;
+  height: 485vh;
 /*   background-color: #062d3e; */
 /*   background-color: black; */
   background-color: #000e13;
@@ -75,8 +75,8 @@ main:after {
 
 .grid-bg {
   position: fixed;
-  bottom: -850vh;
-  left: -100vw;
+  bottom: -230vh;
+  left: -64vw;
   z-index: 1;
 /*   height: var(--main-height); */
   height: 400vh;
@@ -89,12 +89,14 @@ main:after {
   transform-style: preserve-3d;
   transform-origin: center;
 /*   box-shadow: inset -50px 500px 500px rgba(0, 14, 19, 1); */
-  background-size: 200vw 90vh;
+/*   background-size: 200vw 90vh; */
 /*   background-position:center; */
-  background-image: radial-gradient(circle at 60%, white 1%, transparent 1%),
-    radial-gradient(circle at 60%, rgba(255, 255, 255, 0.9) 0%, transparent 15%);
+  background-image: radial-gradient(circle at 60%, white 1%, transparent 2%),
+    radial-gradient(circle at 60%, rgba(255, 255, 255, 0.9) 0%, transparent 15%),
+    linear-gradient(15deg, white 30%, transparent 50%);
   background-color: #4e9fe5;
 /*   background-color: #00babb; */
+/*   background-image: linear-gradient(to top, transparent, red, transparent, red, transparent); */
 /*   background-image: repeating-radial-gradient(red 10%, white 20%); */
 /*   background-image: repeating-linear-gradient(blue 1%, green 2%, green 1%, blue 2%); */
 /*   background-image: linear-gradient(0deg, var(--stripe) 4%, var(--light-primary) 4%, var(--light-primary) 10%, var(--light-primary) 1%, var(--light-primary) 50%, var(--stripe) 50%, var(--stripe) 51%, var(--light-primary) 51%, var(--light-primary) 99%, var(--light-primary) 1%), linear-gradient(90deg, var(--stripe) 4%, var(--light-primary) 4%, var(--light-primary) 10%, var(--light-primary) 1%, var(--light-primary) 50%, var(--stripe) 50%, var(--stripe) 51%, var(--light-primary) 51%, var(--light-primary) 99%, var(--light-primary) 1%); */
@@ -514,9 +516,9 @@ main:after {
 
 .fixed-navbar {
   position: fixed;
-  top: 0;
+  top: 1em;
   right: 0;
-  z-index: 11;
+  z-index: 13;
   padding-right: 2vw;
   height: 5.5vh;
 /*   padding-top: 0.25vh; */
@@ -527,7 +529,7 @@ main:after {
   align-items: flex-start;
   transition: 0.5s;
   overflow: hidden;
-/*   mix-blend-mode:exclusion; */
+  mix-blend-mode:exclusion;
 /*   background-color: #000e13; */
 /*   background-color: black; */
 /*   background-color: white; */
@@ -542,19 +544,22 @@ main:after {
 /*   color: white; */
 /*   text-shadow: 2px 2px 3px rgba(176, 224, 230, 0.7); */
   position: fixed;
-  top: 0;
+  top: 1em;
   left: 1em;
   display: flex;
   flex-flow: row nowrap;
+/*   mix-blend-mode:exclusion; */
+/*   background-color: transparent; */
+    font-family: 'Rubik', sans-serif;
 }
 
 .circle-around-name {
   position: absolute;
-  top: 1px;
-  left: -1.2vh;
-  height: 5vh;
+  top: 0;
+/*   left: -0.75em; */
+/*   height: 5vh; */
   width: 6vh;
-  padding: 0.1em;
+/*   padding: 0.1em; */
   fill: transparent;
   stroke: #f77f00;
   stroke-width: 3px;
@@ -584,11 +589,15 @@ main:after {
   pointer-events: none;
   transition: 0.5s;
   color: white;
-/*   color: rgba(200, 200, 200, 1); */
+  color: rgba(200, 200, 200, 1);
 /*   background-blend-mode:color; */
+/*   mix-blend-mode:exclusion; */
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.7);
+  font-family: 'Rubik', sans-serif;
 }
 
 .first-letter {
+  padding-left: 11px;
 }
 
 .first-part {
@@ -629,6 +638,7 @@ main:after {
 
 .nav-button p {
   color: white;
+    font-family: 'Rubik', sans-serif;
 }
 
 .nav-button:hover {
@@ -958,7 +968,7 @@ main:after {
   opacity: 0;
 }
 
-.project-one-container:after, .project-two-container:after, .project-three-container:after {
+/* .project-one-container:after, .project-two-container:after, .project-three-container:after {
   content: '';
   position: absolute;
   top: 0;
@@ -967,7 +977,6 @@ main:after {
   width: 100%;
   z-index: 15;
   background-color: #f77f00;
-/*   background-color: red; */
   transition: 1s;
   transform-origin: bottom;
   transition-timing-function: cubic-bezier(.27,.65,0,1.02);
@@ -975,7 +984,7 @@ main:after {
 
 .reveal.project-one-container:after, .reveal.project-two-container:after, .reveal.project-three-container:after {
   transform: scaleY(0);
-}
+} */
 
 
 
@@ -1027,7 +1036,7 @@ main:after {
 }
 
 .expand .thumbnail-image img {
-  filter: blur(5px);
+/*   filter: blur(5px); */
 /*   scale: 1.05; */
 }
 
@@ -1205,7 +1214,7 @@ main:after {
 /*   top: 50%; */
   width: 25vw;
 /*   margin-left: 10vw; */
-  padding-left: 1em;
+/*   padding-left: 1em; */
 /*   padding-right: 20%; */
 /*   padding-left: 35%; */
 /*   opacity: 0; */
@@ -1269,90 +1278,51 @@ main:after {
 
 
 
-/* ----------- ABOUT ME HEADER ------------ */
-.about-me-header {
-/*   height: 70vh; */
-  width: 100%;
-/*   text-align: left; */
-/*   position: absolute; */
-/*   top: 345vh; */
-  margin-top: 20vh;
-  margin-bottom: 20vh;
-/*   margin-left: calc(2rem + 10vw); */
-  margin-left: 20vw;
-  transition: 0.2s;
-  z-index: 12;
-  transition: 0.5s;
-/*   background-color: #333333;  */
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-}
-
-/* .about-me-header:before {
-  content: '';
-  position: absolute;
-  top: 10vh;
-  left: 30vw;
-  height: 100%;
-  width: 1px;
-  background-image: linear-gradient(to top, transparent, #00babb, transparent);
-}
-
-.about-me-header:after {
-  content: '';
-  position: absolute;
-  top: 70vh;
-  left: -50vw;
-  height: 1px;
-  width: 90vw;
-  background-image: linear-gradient(to right, transparent, #00babb, transparent);
-} */
-
-.about-me-label {
-  font-size: 2em;
-  font-weight: lighter;
-/*   font-family: 'Lora', serif;  */
-  text-align: left;
-  padding-right: 1em;
-/*   line-height: 90vh; */
-/*   color: #00babb; */
-  color: #000e13;
-  color: white;
-/*   text-shadow: 5px 5px 5px red; */
-/*   font-family: 'Rubik', sans-serif; */
-}
-
-
-
-
-
 
 
 
 
 /* -------------- ABOUT ME -------------- */
 .about-me-container {
-  height: 100vh;
-  width: 50vw;
+  height: 165vh;
+  width: 50%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   position: relative;
   z-index: 11;
-  margin-left: 20vw;
-/*   background-color: white; */
+/*   margin-left: 20vw; */
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: white;
+}
+
+.about-me-label {
+  font-size: 3em;
+  font-weight: lighter;
+/*   font-family: 'Lora', serif;  */
+/*   text-align: left; */
+  padding-right: 1em;
+/*   line-height: 90vh; */
+/*   color: #00babb; */
+  color: #000e13;
+/*   color: white; */
+/*   text-shadow: 5px 5px 5px red; */
+/*   font-family: 'Rubik', sans-serif; */
 }
 
 .about-me-body {
-  height: 50vh;
+/*   height: 50vh; */
 /*   height: 100vh; */
+  margin-top: 10vh;
 /*   width: 50vw; */
-  top: 0;
+/*   top: 0; */
 /*   right: 10%; */
 /*   padding-left: 30vw; */
   padding-left: 0%;
-  padding-right: 20%;
-  left: 0;
-  position: absolute;
+/*   padding-right: 20%; */
+/*   left: 0; */
+/*   position: absolute; */
   z-index: 5;
 /*   background-color: rgba(0, 150, 255, 0.1); */
 /*   border-radius: 100px; */
@@ -1376,11 +1346,12 @@ main:after {
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 /*   opacity: 0; */
   color: #000e13;
-  color: white;
+/*   color: white; */
   padding-top: 1.5em;
 /*   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); */
-  font-size: 1.6em;
-/*   font-family: 'Rubik', sans-serif; */
+  font-size: 2em;
+/*   text-shadow: 0px 0px 1px rgba(0, 0, 0, 1); */
+  font-family: 'Rubik', sans-serif;
 }
 
 .ams1 {
@@ -1408,21 +1379,11 @@ main:after {
 }
 
 
-.about-me-trigger {
-  position: absolute;
-  bottom: 145vh;
-  height: 5vh;
-  width: 100vw;
-/*   background-color: red; */
-}
-
-
-
 
 
 /* -------------- CONTACT ME --------------- */
 .contact-section {
-  height: 100vh;
+  height: 105vh;
   width: 100%;
   position: relative;
 /*   position: fixed; */
@@ -1457,70 +1418,13 @@ main:after {
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 /*   display: none; */
-/*     mask-image: linear-gradient(
+    mask-image: linear-gradient(
     0deg, 
     rgba(0,0,0,1) 0%, 
     rgba(0,0,0,1) 10%, 
-    rgba(0,0,0,0.2) 20%, 
-    rgba(0,0,0,0.3) 25%, 
-    rgba(0,0,0,0.6) 33%,
-    rgba(0,0,0,0) 33%, 
-    rgba(0,0,0,0) 40%, 
-    rgba(0,0,0,0) 50%, 
-    rgba(0,0,0,0) 60%, 
-    rgba(0,0,0,0) 70%, 
-    rgba(0,0,0,0) 80%, 
-    rgba(0,0,0,1) 90%, 
-    rgba(0,0,0,1) 100%); */
-
-
-}
-
-.contact-card-bg:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-/*   background-color: #4e9fe5; */
-  background-color: red;
-  background-color: white;
-/*   opacity: 0.5; */
-    mask-image: linear-gradient(
-    0deg, 
-    rgba(0,0,0,0) 0%, 
-    rgba(0,0,0,0) 10%, 
-    rgba(0,0,0,0) 20%, 
-    rgba(0,0,0,0) 33%, 
-    rgba(0,0,0,0.5) 30%,
-    rgba(0,0,0,0.5) 30%,
-    rgba(0,0,0,0) 50%, 
-    rgba(0,0,0,0) 60%, 
-    rgba(0,0,0,0) 70%, 
-    rgba(0,0,0,0) 80%, 
-    rgba(0,0,0,0) 90%, 
-    rgba(0,0,0,0) 100%);
-/*   mix-blend-mode:lighten; */
-}
-
-.contact-card-bg:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #4e9fe5;
-/*   background-color: red; */
-/*   opacity: 0.5; */
-    mask-image: linear-gradient(
-    0deg, 
-    rgba(0,0,0,0) 0%, 
-    rgba(0,0,0,0) 10%, 
-    rgba(0,0,0,0.2) 20%, 
-    rgba(0,0,0,0.3) 25%, 
-    rgba(0,0,0,0.6) 33%,
+    rgba(0,0,0,0.9) 20%, 
+    rgba(0,0,0,0.92) 25%, 
+    rgba(0,0,0,0.5) 33%,
     rgba(0,0,0,0) 33%, 
     rgba(0,0,0,0) 40%, 
     rgba(0,0,0,0) 50%, 
@@ -1529,109 +1433,35 @@ main:after {
     rgba(0,0,0,0) 80%, 
     rgba(0,0,0,0) 90%, 
     rgba(0,0,0,0) 100%);
-/*   mix-blend-mode:lighten; */
+
+
 }
 
 
-.contact-card-bg-mountain {
-  position: fixed;
-  top: 70vh;
-  left: 0;
-/*   background-color: red; */
-  z-index: 12;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  opacity: 0;
-  pointer-events: none;
-  display: none;
-}
 
-.mountain-left {
-  top: 110vh;
-  /* background-color: red; */
-}
 
-.lets-talk-container {
-  position: absolute;
-  bottom: 62vh;
-  width: 100vw;
-  height: 10vh;
+.contact-card {
+  height: 100%;
+  width: 100%;
   display: flex;
+  flex-flow: column nowrap;
   justify-content: center;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  opacity: 0;
-/*   transform: translate3d(0, 700%, 0); */
-  z-index: 11;
-}
-
-.lets-talk-primary-letters, .lets-talk-secondary-letters {
-  display: flex;
-  flex-flow: row nowrap;
-  position: absolute;
-}
-
-.lets-talk-letter {
-  font-size: 6em;
-  font-weight: lighter;
-}
-
-.ltp {
-  color: white;
-  z-index: 12;
-  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-}
-
-.lts {
-  color: orangered;
-  z-index: 11;
-}
-
-.lets-talk-letter:nth-child(6) {
-  margin-left: 0.5em;
-}
-
-
-
-.contact-card-outer {
-  height: 100vh;
-  width: 100%;
-  transition: 1.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-/*   background-color: black; */
-/*   transform: scale3d(0, 0, 1); */
-}
-
-.contact-card-outer.at-bottom {
-  transform: translate3d(0, 0%, 0);
-}
-
-.contact-card-inner {
-  position: absolute;
-  bottom: 10vh;
-  left: 30vw;
-  height: 70vh;
-  width: 40vw;
-  padding-top: 25vh;
+  align-items: center;
 /*   padding-bottom: 5vh; */
-  display: grid;
-  grid-template-areas: "email email" "call call" "work resume";
-  justify-content: center;
+/*   display: grid; */
+/*   grid-template-areas: "email email" "call call" "work resume"; */
+/*   justify-content: center; */
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  opacity: 0;
+/*   opacity: 0; */
 /*   background-color: #000e13; */
 /*   background-color: #333333; */
 /*   transform: translate3d(0, 100%, 0); */
   overflow: hidden;
 }
 
-.at-bottom .contact-card-inner, .at-bottom .lets-talk-container{
-  opacity: 1;
-/*   transform: translate3d(0, 0%, 0); */
-}
 
-.contact-card-inner * {
+.contact-card * {
   color: white;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
@@ -1649,120 +1479,36 @@ main:after {
   transform-origin: top;
 }
 
-.at-bottom .contact-card-inner:after {
-  transform: translate3d(0%, 100%, 0);
+.contact-me-label {
+  height: 20%;
+  width: 100%;
+  font-size: 4em;
 }
 
 .contact-sect-email {
-  display: grid;
-  align-content: center;
-  grid-area: email;
-}
-
-.contact-sect-call {
-  display: grid;
-  align-content: center;
-  grid-area: call;
-}
-
-.email, .call {
+  height: 10%;
+  width: 100%;
+/*   padding-top: 10vh; */
   font-size: 2em;
 }
 
-.email-me, .email, .call-me, .call {
+.contact-sect-email .email {
+  color: white;
+}
+
+.email {
+  font-size: 2em;
+}
+
+.email-me, .email {
   margin-bottom: 10px;
 }
 
-.email-me, .call-me, .my-resume, .my-work {
+.email-me {
   color: #b99948;
   font-size: 1.6em;
 }
 
-.contact-sect-resume {
-  padding: 1em;
-  width: 120%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  grid-area: resume;
-}
-
-.resume {
-  margin-top: 1em;
-  height: 10vh;
-  width: 10vw;
-  position: relative;
-}
-
-.resume svg * {
-  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5))
-  
-}
-
-.contact-sect-work {
-  padding: 1em;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  grid-area: work;
-}
-
-.work {
-  margin-top: 0.5em;
-  height: 10vh;
-  width: 10vh;
-  position: relative;
-}
-
-.work:before {
-  content: '';
-  height: 50%;
-  width: 50%;
-  position: absolute;
-  top: 20%;
-  left: 25%;
-  border-radius: 500px;
-  box-shadow: 0px 0px 50px rgba(173,216,230, 1);
-  background-color: rgba(173,216,230, 0.35);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s;
-}
-
-.resume:before {
-  content: '';
-  height: 50%;
-  width: 40%;
-  position: absolute;
-  top: 15%;
-  left: 30%;
-  border-radius: 500px;
-  box-shadow: 0px 0px 50px rgba(173,216,230, 1);
-  background-color: rgba(173,216,230, 0.3);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s;
-}
-
-.work:hover:before, .resume:hover:before {
-  opacity: 1;
-}
-
-.gh-link {
-  height: 10vh;
-  width: 10vh;
-  font-size: 5em;
-}
-
-i {
-  border-radius: 15px;
-}
-  
-i:hover {
-  opacity: 1;
-}
 
 
 
